# gdbrunner

./: pyproject.toml
.github/workflows/: package.yml
src/gdbrunner/: __init__.py  backends.json  cli.py
