[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdbrunner"
version = "0.0.1"
description = "GDB debug server launcher for embedded targets"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "OpenMV, LLC", email = "info@openmv.io"}
]
keywords = ["gdb", "debug", "embedded", "jlink", "stlink"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = []

[project.scripts]
gdbrunner = "gdbrunner.cli:main"

[project.urls]
Homepage = "https://openmv.io"
Repository = "https://github.com/openmv/gdbrunner"

[tool.setuptools.packages.find]
where = ["src"]
